# aurora-dsql-starter-kit

./: 404.html  AGENTS.md  AGENTS_SETUP.md  PR_DESCRIPTION.md  README.md  agents-md.config.ts  api-reference.html  api-reference.md  authentication-and-authorization.html  authentication-and-authorization.md  backup-and-restore.html  backup-and-restore.md  connectors-overview.html  connectors-overview.md  considerations.html  considerations.md  copy-page-button.html  copy-page-script.html  database-roles-iam-authentication.html  database-roles-iam-authentication.md  generate-authentication-token.html  generate-authentication-token.md  index.html  index.md  llms.txt  managing-clusters.html  managing-clusters.md  mkdocs.yml  multi-region-clusters.html  multi-region-clusters.md  programming-with-dsql.html  programming-with-dsql.md  quotas-and-limits.html  quotas-and-limits.md  single-region-clusters.html  single-region-clusters.md  sitemap.xml  troubleshooting.html  troubleshooting.md  what-is-amazon-aurora-dsql.html  (+1 more)
.github/workflows/: auto-update-samples.yml  deploy-docs.yml  generate-agents.yml  sync-kiro-power.yml
ai-rules/skills/: SKILL.md
assets/javascripts/: bundle.79ae519e.min.js  bundle.e71a0d61.min.js
docs/: multi-region-clusters.md  single-region-clusters.md
docs/guides/getting-started/: quickstart.md
docs/stylesheets/: extra.css
documentation/: mkdocs.yml
documentation/docs/: api-reference.md  authentication-and-authorization.md  backup-and-restore.md  connectors-overview.md  considerations.md  copy-page-button.md  copy-page-script.md  database-roles-iam-authentication.md  generate-authentication-token.md  index.md  managing-clusters.md  multi-region-clusters.md  programming-with-dsql.md  quotas-and-limits.md  simple.txt  single-region-clusters.md  test-snippet.md  troubleshooting.md  what-is-amazon-aurora-dsql.md
documentation/docs/.snippets/: copy-button.md  copy-page-button.md
documentation/docs/generative-ai/: jupyterlab.md  mcp-server.md  query-editor.md
generative-ai/: jupyterlab.html  jupyterlab.md  mcp-server.html  mcp-server.md  query-editor.html  query-editor.md
guides/getting-started/: quickstart.html  quickstart.md
samples/: CODE_OF_CONDUCT.html  CONTRIBUTING.html  index.html
samples/cli/authentication/: generate_token.sh
samples/lambda/: cdk.js  cdk.json  index.html  package-lock.json  package.json
samples/python/asyncpg/: index.html  pyproject.toml  requirements.txt
samples/python/asyncpg/src/: example_preferred.py
samples/python/asyncpg/src/alternatives/: index.html
samples/python/asyncpg/src/alternatives/no_connection_pool/: example_with_no_connection_pool.py
samples/python/asyncpg/src/alternatives/pool/: example_with_nonconcurrent_connection_pool.py
samples/python/asyncpg/test/: test_example_preferred.py
samples/python/asyncpg/test/alternatives/no_connection_pool/: test_example_with_no_connection_pool.py
samples/python/asyncpg/test/alternatives/pool/: test_example_with_nonconcurrent_connection_pool.py
samples/quickstart_data/: department-insert-multirow.sql  invoice.csv
samples/rust/cluster_management/: Cargo.toml  index.html
samples/rust/cluster_management/src/: lib.rs
samples/rust/cluster_management/tests/: multi_region_test.rs  single_region_test.rs
samples/rust/sqlx/: Cargo.toml  index.html
samples/rust/sqlx/src/: main.rs
search/: search_index.json
steering/distributed/: SKILL.md
steering/drafts/: dsql_steering_draft.md  dsql_steering_notes.md
stylesheets/: extra.css
(+315 files in other folders)
