[package]
name = "dsql-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8"
aws-sdk-dsql = "1.49"
tokio = { version = "1", features = ["full"] }

# Define each example as a separate binary. This ensures customers can easily execute individual examples without
# modifying code or running the test suite.
[[bin]]
name = "create_single_region_cluster"
path = "src/bin/create_single_region_cluster.rs"

[[bin]]
name = "create_multi_region_clusters"
path = "src/bin/create_multi_region_clusters.rs"

[[bin]]
name = "get_cluster"
path = "src/bin/get_cluster.rs"

[[bin]]
name = "update_cluster"
path = "src/bin/update_cluster.rs"

[[bin]]
name = "delete_single_region_cluster"
path = "src/bin/delete_single_region_cluster.rs"

[[bin]]
name = "delete_multi_region_clusters"
path = "src/bin/delete_multi_region_clusters.rs"

# Make example files available as libraries for testing
[lib]
name = "dsql_examples"
path = "src/lib.rs"
