[package]
name = "sqlx_example"
version = "0.1.0"
edition = "2021"
include = ["/src"]

[dependencies]
tokio = { version = "1.50", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls" , "postgres", "uuid"] }
anyhow = { version = "1", features = ["backtrace"] }
aws-config = "1.8"
aws-sdk-dsql = "1.54"
rand = "0.10"
uuid = { version = "1.22", features = ["v4"] }
log = "0.4.29"


[[bin]]
name = "sqlx"
path = "src/main.rs"
